# pychemistry

./: .gitignore  README.md  dash-buffers.py  dashmichaelis.py  mol2scad.py  pyproject.toml
.github/workflows/: codeql.yml
scripts/buffer_app/: README.md  buffer_app.py  setup.py
scripts/dash_buffers/: README.md  dash_buffers.py
scripts/dash_michaelis/: README.md  dash_michaelis.py  requirements.txt
scripts/doseresponse/: README.md  doseresponse.py
scripts/mol2scad/: README.md  mol2scad.py  setup.py
