[project]
name = "pychemistry"
version = "0.1.0"
authors = [{name = "Paradoxdruid", email = "bonham@gmail.com"}]
readme = "README.md"
description = "A collection of python scripts for chemistry and biochemistry"
requires-python = ">=3.7"
license = "GPL-3.0-only"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "dash",
    "PySimpleGUI",
]
urls = {homepage = "https://github.com/Paradoxdruid/pychemistry"}

[tool.mypy]
ignore_missing_imports = true
strict = true
files = [
    "scripts/buffer_app/*.py", 
    "scripts/dash_buffers/*.py",
    "scripts/dash_michaelis/*.py",
    "scripts/doseresponse/*.py",
    "scripts/mol2scad/mol2scad.py"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
